[gd_scene load_steps=11 format=3 uid="uid://c1re0cj8r6r7v"]

[ext_resource type="Script" path="res://skripts/main_menu.gd" id=1]
[ext_resource type="FontFile" path="res://assets/fonts/GrapeSoda (2).ttf" id=2]
[ext_resource type="Texture2D" path="res://assets/classroom/02_Background_Classroom_Final.png" id=3]
[ext_resource type="Texture2D" path="res://assets/classroom/01_Button_Play.png" id=4]
[ext_resource type="Texture2D" path="res://assets/classroom/01_Button_Exit.png" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource(3)

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0.74978, 0.74978, 0.74978, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.603248, 0.603248, 0.603248, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource(1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -28.0
offset_right = 201.0
offset_bottom = 148.0
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="VBoxContainer"]
text = "Abenteuer beginnen!"
theme_override_colors/font_color = Color(0, 0, 0)
theme_override_styles/focus = SubResource(2)
theme_override_styles/hover = SubResource(3)
theme_override_styles/pressed = SubResource(4)
theme_override_styles/normal = SubResource(5)

[node name="CharacterButton" type="Button" parent="VBoxContainer"]
text = "Charakterauswahl"
theme_override_colors/font_color = Color(0, 0, 0)
theme_override_styles/focus = SubResource(2)
theme_override_styles/hover = SubResource(3)
theme_override_styles/pressed = SubResource(4)
theme_override_styles/normal = SubResource(5)

[node name="ExitButton" type="Button" parent="VBoxContainer"]
text = "Beenden"
theme_override_colors/font_color = Color(0, 0, 0)
theme_override_styles/focus = SubResource(2)
theme_override_styles/hover = SubResource(3)
theme_override_styles/pressed = SubResource(4)
theme_override_styles/normal = SubResource(5)

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -140.0
offset_right = 404.0
offset_bottom = -46.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource(2)
theme_override_font_sizes/font_size = 91
text = "Survive the Semester"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/CharacterButton" to="." method="_on_character_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]